mypy_tests/negative.output.expected
negative.py:11: error: Incompatible return value type (got "str", expected "int")
negative.py:15: error: Incompatible return value type (got "bool", expected "str")
negative.py:19: error: Incompatible return value type (got "bool", expected "str")
negative.py:22: error: Argument 1 to "arg_type" has incompatible type "Callable[..., Any]"; expected "int"
Found 4 errors in 1 file (checked 1 source file)
